Add specific deployment URLs to CORS configuration